# emitter

./: .gitignore  LICENSE  README.md  client.html  client.js  emitter.cabal  server.hs
other/: client.css  client.html
src/: emitter-server.hs
src/Pipes/: Arrow.hs
